# etl_project

./: .gitignore  Dockerfile  Makefile  README.md  logg.py  main.py  pyproject.toml  requirements.txt
airflow/: docker-compose.yaml  main.py
airflow/dags/: etl_dag.py
data/processed/: input.csv  output.csv
data/raw/: input.csv
etl/lib/workers/: worker.py
lib/clients/: client.py
lib/constants/: constants.py
lib/processors/: processor.py
lib/workers/: worker.py
