[tool.poetry]
name = "etl_project"
version = "0.1.0"
description = "my etl project"
authors = ["imran <imranndubai@icloud.com>"]
readme = "README.md"
packages = [{include = "etl_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
python-dotenv = "~1.0.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

